--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
             allowfullscreen
           ></iframe>
           <iframe
-            src="https://www.youtube.com/embed/mgY7V-nB3VI?si=QHBl-NI9oMXOcl3r"
+            src="https://www.youtube.com/embed/Y36b8_WFejI?si=t_YLxR6kENak6r9n"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
           ></iframe>
           <iframe
-            src="https://www.youtube.com/embed/mgY7V-nB3VI?si=QHBl-NI9oMXOcl3r"
+            src="https://www.youtube.com/embed/SIuF37EWaLU?si=_OFc-eLUFj9AdUwg"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
@@ -162,16 +162,16 @@
         </div>
         <div class="contato-form">
           <form action="">
-            <label for="nome">
+            <label class="col-2" for="nome">
               <input type="text" placeholder="Nome" />
             </label>
-            <label for="email">
+            <label class="col-2" for="email">
               <input type="email" placeholder="E-mail" />
             </label>
-            <label for="mensagem">
-              <textarea placeholder="mensagem"> </textarea>
+            <label class="col-2" for="mensagem">
+              <textarea placeholder="Mensagem" rows="5"></textarea>
             </label>
-            <button>Enviar</button>
+            <button class="btn-contato">Enviar</button>
           </form>
         </div>
       </div>
